Refactoring the SSTableReader to use an iterator model consistent with the SSTableWriter