@@ -98,7 +98,7 @@ public class ReaderTaskTest {
         ProtoBuffSerializedStrand strand = ProtoBuffSerializedStrand.newBuilder().mergeFrom(serializedStrand).build();
         TargetQueryResponse targetQueryResponse = TargetQueryResponse.newBuilder().addStrands(strand).build();
         task.appendToResponse(Collections.singletonList(new TableIterator.TableEntry<>(new StrandStorageKey(1000, 2000),
-                                                                                       getSerializedStrandStorageValue(
+                                                                                       new StrandStorageValue(
                                                                                                serializedStrand
                                                                                                        .toByteArray()))));
         Mockito.verify(containerMock, Mockito.times(1)).write(targetQueryResponse);
@@ -115,13 +115,14 @@ public class ReaderTaskTest {
                 .strandToProtoBuff(StrandStorageKeyValueTest.createStrand("9xj", 1000, 2000, 100.0, 122.0, 513.4));
         ProtoBuffSerializedStrand strand2 = CommonUtil
                 .strandToProtoBuff(StrandStorageKeyValueTest.createStrand("9xj", 1000, 2000, 100.0, 123.0, 523.4));
-        byte[] serializedStrandStorageValue =
-                getSerializedStrandStorageValue(strand1.toByteArray(), strand2.toByteArray());
-        List<TableIterator.TableEntry<StrandStorageKey, byte[]>> matchingBlockData = Collections.singletonList(
-                new TableIterator.TableEntry<>(new StrandStorageKey(1000, 2000), serializedStrandStorageValue));
+        StrandStorageValue strandStorageValue = new StrandStorageValue(strand1.toByteArray(), strand2.toByteArray());
+        List<TableIterator.TableEntry<StrandStorageKey, StrandStorageValue>> matchingBlockData = Collections
+                .singletonList(new TableIterator.TableEntry<>(new StrandStorageKey(1000, 2000), strandStorageValue));
         task.appendToResponse(matchingBlockData);
-        Mockito.verify(containerMock, Mockito.times(1)).write(TargetQueryResponse.newBuilder().addStrands(strand1).build());
-        Mockito.verify(containerMock, Mockito.times(1)).write(TargetQueryResponse.newBuilder().addStrands(strand2).build());
+        Mockito.verify(containerMock, Mockito.times(1))
+               .write(TargetQueryResponse.newBuilder().addStrands(strand1).build());
+        Mockito.verify(containerMock, Mockito.times(1))
+               .write(TargetQueryResponse.newBuilder().addStrands(strand2).build());
     }
 
     @Test
@@ -133,18 +134,13 @@ public class ReaderTaskTest {
         byte[] serializedStrand =
                 StrandStorageKeyValueTest.createStrand("9xj", 1000, 2000, 100.0, 122.0, 513.4).serializeAsProtoBuff()
                                          .toByteArray();
-        byte[] serializedStrandStorageValue = getSerializedStrandStorageValue(serializedStrand);
+        StrandStorageValue strandStorageValue = new StrandStorageValue(serializedStrand);
         // send enough data for two batches
         int messageCount = (int) Math.ceil(batchSizeInBytes * 2.0 / serializedStrand.length);
-        List<TableIterator.TableEntry<StrandStorageKey, byte[]>> matchingStrands = IntStream.range(0, messageCount)
-                                                                                            .mapToObj(
-                                                                                                    i -> new TableIterator.TableEntry<>(
-                                                                                                            new StrandStorageKey(
-                                                                                                                    i, i
-                                                                                                                       + 1),
-                                                                                                            serializedStrandStorageValue))
-                                                                                            .collect(Collectors
-                                                                                                             .toList());
+        List<TableIterator.TableEntry<StrandStorageKey, StrandStorageValue>> matchingStrands =
+                IntStream.range(0, messageCount).mapToObj(
+                        i -> new TableIterator.TableEntry<>(new StrandStorageKey(i, i + 1), strandStorageValue))
+                         .collect(Collectors.toList());
         task.appendToResponse(matchingStrands);
         Mockito.verify(containerMock, Mockito.times(2)).write(Mockito.any());
     }
@@ -158,32 +154,34 @@ public class ReaderTaskTest {
         prepareSSTable(10, 2, metadata);
 
         ReaderTask task = new ReaderTask(TargetQueryRequest.newBuilder().build(), containerMock, 1024 * 1024);
-        SSTableReader<StrandStorageKey> reader = new SSTableReader<>(metadata, StrandStorageKey.class);
-        List<TableIterator.TableEntry<StrandStorageKey, byte[]>> strands =
+        SSTableReader<StrandStorageKey, StrandStorageValue> reader = new SSTableReader<>(metadata,
+                                                                                         StrandStorageKey.class,
+                                                                                         StrandStorageValue.class);
+        List<TableIterator.TableEntry<StrandStorageKey, StrandStorageValue>> strands =
                 task.readBlock(reader, new StrandStorageKey(0, 1), Collections.singletonList(new Interval(0, 20)));
         Assertions.assertEquals(10, strands.size());
         Assertions.assertEquals(new StrandStorageKey(0, 1), strands.get(0).getKey());
         Assertions.assertEquals(new StrandStorageKey(9, 10), strands.get(9).getKey());
 
-        reader = new SSTableReader<>(metadata, StrandStorageKey.class);
+        reader = new SSTableReader<>(metadata, StrandStorageKey.class, StrandStorageValue.class);
         strands = task.readBlock(reader, new StrandStorageKey(0, 1), Collections.singletonList(new Interval(0, 5)));
         Assertions.assertEquals(5, strands.size());
         Assertions.assertEquals(new StrandStorageKey(0, 1), strands.get(0).getKey());
         Assertions.assertEquals(new StrandStorageKey(4, 5), strands.get(4).getKey());
 
-        reader = new SSTableReader<>(metadata, StrandStorageKey.class);
+        reader = new SSTableReader<>(metadata, StrandStorageKey.class, StrandStorageValue.class);
         strands = task.readBlock(reader, new StrandStorageKey(0, 1), Collections.singletonList(new Interval(10, 5)));
         Assertions.assertEquals(0, strands.size());
 
         // multiple intervals
-        reader = new SSTableReader<>(metadata, StrandStorageKey.class);
+        reader = new SSTableReader<>(metadata, StrandStorageKey.class, StrandStorageValue.class);
         strands = task.readBlock(reader, new StrandStorageKey(0, 1),
                                  Arrays.asList(new Interval(0, 5), new Interval(10, 5)));
         Assertions.assertEquals(5, strands.size());
         Assertions.assertEquals(new StrandStorageKey(0, 1), strands.get(0).getKey());
         Assertions.assertEquals(new StrandStorageKey(4, 5), strands.get(4).getKey());
 
-        reader = new SSTableReader<>(metadata, StrandStorageKey.class);
+        reader = new SSTableReader<>(metadata, StrandStorageKey.class, StrandStorageValue.class);
         strands = task.readBlock(reader, new StrandStorageKey(0, 1),
                                  Arrays.asList(new Interval(0, 5), new Interval(3, 5)));
         Assertions.assertEquals(5, strands.size());
@@ -323,7 +321,7 @@ public class ReaderTaskTest {
         File f = new File(tempDir + File.separator + "temp.file");
         metadata.setPath(f.getAbsolutePath());
 
-        byte[] payload = getSerializedStrandStorageValue(
+        StrandStorageValue strandStorageValue = new StrandStorageValue(
                 StrandStorageKeyValueTest.createStrand("9xj", 1000, 2000, 100.0, 122.0, 513.4).serializeAsProtoBuff()
                                          .toByteArray());
         BlockCompressor compressor = new LZ4BlockCompressor();
@@ -339,8 +337,7 @@ public class ReaderTaskTest {
                     metadata.addBlockIndex(key, dos.size());
                 }
                 key.serialize(blockDataOS);
-                blockDataOS.writeInt(payload.length);
-                blockDataOS.write(payload);
+                strandStorageValue.serialize(blockDataOS);
             }
             blockDataOS.flush();
             baos.flush();
@@ -358,17 +355,5 @@ public class ReaderTaskTest {
         fos.flush();
         dos.close();
         fos.close();
-    }
-
-
-    private byte[] getSerializedStrandStorageValue(byte[]... serializedStrand) throws IOException {
-        StrandStorageValue strandStorageValue = new StrandStorageValue(serializedStrand);
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        DataOutputStream dos = new DataOutputStream(baos);
-        strandStorageValue.serialize(dos);
-        dos.flush();
-        baos.flush();
-
-        return baos.toByteArray();
     }
 }
